<resources>
    <string name="app_name">Exam project</string>
    <!-- titles -->
    <string name="connection_title">Connection</string>
    <string name="object_title">Objects list</string>
    <string name="inscription_title" translatable="false">Inscription</string>
    <string name="tracking_objects_title">Tracking objects</string>
    <string name="new_sale_object_title">New sale object</string>
    <string name="details_sale_object_title">Sale object details</string>
    <!-- input text -->
    <string name="email_address_text" translatable="false">Email</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="city_text">City</string>
    <string name="postal_code_text">Postal code</string>
    <string name="postal_address_text">Address</string>
    <string name="street_number_text">Street number</string>
    <string name="cancel_text">Cancel</string>
    <string name="confirm_text">Confirm</string>
    <string name="validate_text">Validate</string>
    <string name="max_distance_text">Maximum distance</string>
    <string name="distance_text" translatable="false">Distance</string>
    <string name="refresh_text">Refresh</string>
    <string name="logout_text">Logout</string>
    <string name="new_object_text">New object</string>
    <string name="tracking_objects_text">Tracking objects</string>
    <string name="object_name_text">Object name</string>
    <string name="object_type_text">Object type</string>
    <string name="select_object_type_text">Select object type</string>
    <string name="object_description_text">Object description</string>
    <string name="object_price_text">Price</string>
    <string name="object_seller_text">Seller</string>
    <string name="add_an_image_text">Add an image</string>
    <string name="add_tracking_text">Add to tracking objects</string>
    <string name="distance_measure" translatable="false">km</string>
    <string name="currency" translatable="false">€</string>
    <!-- messages -->
    <string name="user_success_message">User create successfully</string>
    <string name="user_fail_message">User create failed</string>
    <string name="sale_object_success_message">Object create successfully</string>
    <string name="sale_object_fail_message">Object create failed</string>
    <string name="password_not_matched_message">The password are not same</string>
    <string name="email_not_matched_message">The email address is wrong</string>
    <string name="empty_fields_message">One or more fields are empty</string>
    <string name="price_not_positive_message">The price must be more than 0</string>
    <string name="login_error_message">Impossible to be connected</string>
    <string name="login_user_not_found_message">Wrong email and/or password</string>
    <string name="text_too_short_message">The text is too short</string>
    <string name="objects_not_loaded_message">Objects not loaded</string>
    <string name="objects_not_found_message">No object found</string>
    <string name="editText_empty_message">This field can not be empty</string>
    <string name="tracking_already_exists_message">Object is already tracking</string>
    <string name="tracking_success_message">Object added to tracking</string>
    <string name="cancel_message">Cancel</string>
    <string name="logout_message">Logout</string>
    <!-- object Types -->
    <string name="car">Car</string>
    <string name="truck">Truck</string>
    <string name="bicycle">Bicycle</string>
    <string name="computer">Computer</string>
    <string name="keyboard">Keyboard</string>
    <string name="mouse">Mouse</string>
    <string name="pants">Pants</string>
    <string name="shirt">Shirt</string>
    <string name="printer">Printer</string>
    <string name="food">Food</string>
    <string name="other">Other</string>
</resources>