<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ObjectListActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/object_title"
        style="@style/tv_title"
        android:layout_marginBottom="20dp"
        />

    <!-- maximum distance edit -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/et_max_distance"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/max_distance_text"
            style="@style/et_input"
            android:layout_marginRight="20dp"
            />

        <Button
            android:id="@+id/btn_max_distance_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_text" />

    </LinearLayout>

    <!-- option Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btn_add_new_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_object_text"
            />

        <Button
            android:id="@+id/btn_tracking_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracking_objects_text"
            />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_text"
            />

    </LinearLayout>



    <!-- list of objects -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll_objects_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

</LinearLayout>